--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "Store",
   "main": "bamazon.js",
   "dependencies": {
+    "cli-table3": "^0.5.1",
     "inquirer": "^6.3.1",
-    "mysql": "^2.17.1"
+    "mysql": "^2.17.1",
+    "table": "^5.4.0"
   },
   "devDependencies": {},
   "scripts": {
